MPP-3731: Fix alias button overflowing into block-level text

--- a/frontend/src/components/dashboard/aliases/MaskCard.module.scss
+++ b/frontend/src/components/dashboard/aliases/MaskCard.module.scss
@@ -48,6 +48,7 @@
     .copy-button-wrapper {
       display: flex;
       align-items: center;
+      overflow: hidden;
 
       @media screen and #{$mq-md} {
         gap: $spacing-sm;
@@ -68,6 +69,7 @@
       font-weight: 500;
       border-radius: $border-radius-sm;
       cursor: pointer;
+      overflow: inherit;
 
       &:hover {
         color: $color-green-70;
@@ -75,32 +77,15 @@
 
       samp {
         font-family: inherit;
-        max-width: 250px; // Setting a fixed width to truncate string
         align-self: start;
         white-space: nowrap;
-        overflow: hidden;
+        overflow: inherit;
         text-overflow: ellipsis;
-
-        // Magic numbers: Stops long mask domains from overflowing, and enforces an ellipsis.
-        @media screen and #{$mq-sm} {
-          max-width: 350px; // Flex items wrap on smaller screens, hence there is more space
-        }
-        @media screen and #{$mq-md} {
-          max-width: 320px;
-        }
-        @media screen and (min-width: $content-lg) {
-          max-width: 400px;
-        }
-        // Note: Since the mask card is being used in a container (.main-wrapper) with a max-width of $content-xl,
-        // this will work. But if we use a mask card where the max-width of the parent container is < $content-xl,
-        // this formatting will break and could cause overflow (ex. MPP-3594). It could be worthwhile to do a re-design of the mask card CSS as whole.
-        @media screen and (min-width: $content-xl) {
-          max-width: calc($content-md - 140px);
-        }
       }
 
       .copy-icon {
         width: 15px; // Fixed size for the copy icon
+        flex: 1 0 auto; // Avoid copied icon shrinking
       }
     }
 
@@ -136,8 +121,6 @@
 
       @media screen and #{$mq-lg} {
         display: initial;
-        position: absolute;
-        right: 0;
       }
     }
   }
